# chromietabs

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  class_chromie_tabs_1_1_command.html  class_chromie_tabs_1_1_command.js  class_chromie_tabs_1_1_command_factory-members.html  class_chromie_tabs_1_1_command_factory.html  class_chromie_tabs_1_1_pair_structure.html  class_chromie_tabs_1_1_path_utils.html  class_chromie_tabs_1_1_pickle.html  class_chromie_tabs_1_1_pickle_1_1_iterator.html  class_chromie_tabs_1_1_s_n_s_s_file_reader.html  class_chromie_tabs_1_1_s_n_s_s_file_reader.js  class_chromie_tabs_1_1_session_analyzer.html  class_chromie_tabs_1_1_session_reader.html  class_chromie_tabs_1_1_set_selected_navigation_index_command.html  class_chromie_tabs_1_1_set_selected_tab_in_index.html  class_chromie_tabs_1_1_set_tab_index_in_window_command-members.html  class_chromie_tabs_1_1_set_tab_index_in_window_command.html  class_chromie_tabs_1_1_set_tab_window_command-members.html  class_chromie_tabs_1_1_set_tab_window_command.html  class_chromie_tabs_1_1_set_window_bounds3.html  class_chromie_tabs_1_1_set_window_bounds3.js  class_chromie_tabs_1_1_tab_closed_command.html  class_chromie_tabs_1_1_update_tab_navigation_command.html  class_chromie_tabs_1_1_window_closed_command-members.html  class_chromie_tabs_1_1_window_closed_command.html  commandfactory_8h_source.html  commands_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_97e0225beabe03c6d52f021377279ab7.html  doc-generator.sh  index.html  navtreeindex0.js  pathutils_8h_source.html  pickle_8h_source.html  rawcommand_8h_source.html  (+7 more)
0.1/: annotated.html  classes.html  examples.html  (+28 more)
src/chromietabs/: CMakeLists.txt  commandfactory.cc  commandfactory.h  commands.cc  commands.h  fileparser.cc  fileparser.h  pathutils.cc  pathutils.h  pickle.cc  pickle.h  rawcommand.h  sessionanalyzer.cc  sessionanalyzer.h  sessionreader.cc  sessionreader.h  snssfilereader.cc  snssfilereader.h
(+122 files in other folders)
